--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "15.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-intersection-observer": "^9.16.0"
+    "react-intersection-observer": "^9.16.0",
+    "react-photo-album": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
